k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nezz-takehome
  labels:
    name: nezz-takehome
    environment: dev
